--- a/views/advert_list.html
+++ b/views/advert_list.html
@@ -63,8 +63,8 @@
         <td><%= item.end %></td>
         <td>1</td>
         <td>
-            <a href="javascript:;" class="btn btn-info btn-xs">编辑</a>
-            <a href="javascript:;" class="btn btn-danger btn-xs">删除</a>
+            <a id="a1" href="/advert/one/<%= item._id %>" class="btn btn-info btn-xs">编辑</a>
+            <a id="a2" href="/advert/remove/<%= item._id %>" class="btn btn-danger btn-xs">删除</a>
         </td>
     </tr>
     <% }) %>
@@ -122,5 +122,20 @@
         })
     }
 
+    // $('.btn-info').on('click',function(){
+    //     console.log($(this).attr('data-id'));
+        
+        // $.ajax({
+        //     url:'/advert/one/'+$(this).attr('data-id'),
+        //     type:'get',
+        //     data:$(this).attr('data-id'),
+        //     success:function(data){
+        //         if (data.err_code === 0){
+        //             console.log(data.result._id);
+                    
+        //         }
+        //     }
+        // })
+    // })
 </script>
 {% endblock %}
